hphp/test/zend/good/ext/date/tests/bug32555.php.skipif
<?hh 
<<__EntryPoint>> function main() { if (substr(PHP_OS, 0, 3) == 'WIN') die('skip strftime uses system TZ'); 
}
