hphp/test/zend/bad/ext/standard/tests/file/bug60120.php.skipif
<?php
if (substr(PHP_OS, 0, 3) != 'WIN') {
    die('skip only for Windows');
}
$php = getenv('TEST_PHP_EXECUTABLE');
if (!$php) {
	die("No php executable defined\n");
}
?>